# ochw

./: .gitignore  README.md
hw1/: README.md  lab1.ps1
hw3/: .gitignore  README.md  main.cpp
hw4/: .gitignore  CMakeLists.txt  README.md  main.cpp
hw4/include/: config.h  notepad.h  saver.h
hw4/src/loader/: CMakeLists.txt  loader.cpp
hw4/src/notepad/: CMakeLists.txt  notepad.cpp
hw4/src/saver/: CMakeLists.txt  saver.cpp
hw5/: CMakeLists.txt  README.md  main.cpp
hw5/include/: loader.h  notepad.h  saver.h
hw5/src/Config/: CMakeLists.txt
hw5/src/loader/: CMakeLists.txt  loader.cpp
hw5/src/notepad/: CMakeLists.txt  notepad.cpp
hw5/src/saver/: CMakeLists.txt  saver.cpp
hw6/: CMakeLists.txt  README.md  phil.cpp  readerWriter_mutexC.cpp  readerWriter_mutexF.cpp  thread_race.cpp  warThread.cpp
hw6/buildThread/: CMakeCache.txt  Makefile  cmake_install.cmake
hw7/: CMakeLists.txt  README.md  main.cpp
hw7/include/: notepad.h
hw7/src/Config/: CMakeLists.txt  config.cpp
hw7/src/loader/: CMakeLists.txt  loader.cpp
hw7/src/notepad/: notepad.cpp
hw7/src/saver/: CMakeLists.txt  saver.cpp
